--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "html-loader": "^5.0.0",
+    "raw-loader": "^4.0.2",
     "vue-loader": "^17.3.1",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
